Update Blog “2017-12-08-foo-bar”

--- a/src/pages/blog/2017-12-08-foo-bar.md
+++ b/src/pages/blog/2017-12-08-foo-bar.md
@@ -1,6 +1,6 @@
 ---
 templateKey: blog-post
-path: foo-bar
+path: /foo-bar
 title: Foo Bar
 date: 2017-12-08T18:00:37.881Z
 description: Doing something greater
